fix(24-03): fix NessieContainer S3 config and branchExists probe
Auto-fixes applied during integration test development:

- [Rule 1 - Bug] NessieContainer.withS3Warehouse: switched from STATIC
  auth (Nessie secrets system - not loading correctly) to APPLICATION_GLOBAL
  with standard AWS_ACCESS_KEY_ID/AWS_SECRET_ACCESS_KEY env vars, which the
  Nessie container picks up via the default AWS credential provider chain.

- [Rule 1 - Bug] RestIcebergCatalogPlugin.branchExists: switched probe from
  namespaceExists(root) (always returns true without HTTP call) to
  datasetExists(probe_path): Nessie returns 400 NoSuchReferenceException for
  nonexistent branches (caught -> false) and 404 NoSuchTableException for
  valid branches with no probe table (returns false -> branchExists true).

- [Rule 1 - Bug] RestIcebergCatalogPlugin.createBranchScopedAccessor: URL-
  encode branch name so slashes in names like "feature/my-branch" become
  "feature%2Fmy-branch" in the REST endpoint URI, which Nessie correctly
  maps to the branch instead of interpreting as a path segment.

- TestRestIcebergCatalogPlugin: updated unit tests to mock datasetExists()
  probe instead of namespaceExists() for branchExists testing.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>